cmake_minimum_required(VERSION 3.10)
project(algos)

set(CMAKE_CXX_STANDARD 14)

add_executable(algos_1 2025.cpp)
add_executable(algos_2 1005.cpp)
add_executable(algos_3 1155.cpp)
add_executable(algos_4 1296.cpp)
add_executable(algos_5 1401.cpp)
add_executable(algos_6 1207.cpp)
add_executable(algos_7 1444.cpp)
add_executable(algos_8 1604.cpp)