cmake_minimum_required(VERSION 3.10)
project(algos)

set(CMAKE_CXX_STANDARD 14)

include_directories(SYSTEM ./lib)

add_executable(algos_1 2025.cpp)
add_executable(algos_2 1005.cpp)
add_executable(algos_3 1155.cpp)
add_executable(algos_4 1296.cpp)
add_executable(algos_5 1401.cpp)
add_executable(algos_6 1207.cpp)
add_executable(algos_7 1444.cpp)
add_executable(algos_8 1604.cpp)
add_executable(algos_9 1726.cpp)
add_executable(algos_10 1322.cpp)
add_executable(algos_11 1494.cpp)
add_executable(algos_12 1521.cpp)
add_executable(algos_13 1067.cpp)
add_executable(algos_14 1628.cpp)
add_executable(algos_15 1650.cpp)
add_executable(algos_16 1080.cpp)
add_executable(algos_17 1450.cpp)
